fix(configurations): table style namespacing

--- a/src/scripts/modules/configurations/react/components/ConfigurationRowsTable.less
+++ b/src/scripts/modules/configurations/react/components/ConfigurationRowsTable.less
@@ -1,17 +1,17 @@
-.table > .tbody > .tr.sortable-fallback {
+.table.config-rows-table > .tbody > .tr.sortable-fallback {
   display: none;
 }
 
-.table > .tbody > .tr.sortable-ghost {
+.table.config-rows-table > .tbody > .tr.sortable-ghost {
   background-color: #e5f4f7;
 }
 
-.table > .tbody > .tr {
+.table.config-rows-table > .tbody > .tr {
   text-decoration: none;
   cursor: pointer;
 }
 
-.table > .tbody > .tr:hover {
+.table.config-rows-table > .tbody > .tr:hover {
   background-color: #e5f4f7;
   text-decoration: none;
 }
